# sales_agent

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
memory/: MEMORY.md  WORKFLOW.md
scripts/: seed_data.py
src/agent/: README.md  __init__.py  graph.py  intent.py  nodes.py  state.py
src/api/: README.md  __init__.py  main.py
src/api/routes/: cart.py  chat.py  orders.py  products.py  ui.py
src/app/: cli.py
src/convert/: CLAUDE.md  clean.py  config.py  metadata.py  parse.py  pipeline.py
src/convert/profiles/: __init__.py  base.py  financial_rfp.py  manufacturing.py
src/core/: README.md  __init__.py  config.py  logging.py
src/db/: README.md  __init__.py  cart_crud.py  order_crud.py  postgres.py  product_crud.py
src/graph/: README.md  __init__.py  context_graph.py  neo4j_client.py  product_graph.py
src/models/: README.md  __init__.py  cart.py  order.py  product.py  review.py
src/rag/: CLAUDE.md  README.md  __init__.py  config.py  embeddings.py  ingest.py  loaders.py  prompts.py  qdrant_client.py  query.py  search.py  utils.py
static/: index.html
tests/: test_agent.py  test_api.py  test_convert_clean.py  test_convert_metadata.py  test_convert_profiles.py  test_core.py  test_db.py  test_graph.py  test_models.py  test_rag.py  test_smoke.py
