[tool.poetry]
name = "sales-agent"
version = "0.1.0"
description = "B2C General Sales Agent — Graph DB + RAG + LangGraph"
authors = ["Sean-A1"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# ---- Core ----
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
typer = "^0.15.0"
rich = "^13.0.0"
tqdm = "^4.66.0"
pyyaml = "^6.0.0"
loguru = "^0.7.0"

# ---- LangChain / LangGraph ----
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = ">=0.2.0,<0.4.0"
langgraph = "^0.2.0"
openai = "^1.0.0"

# ---- Graph DB ----
neo4j = "^5.0.0"
langchain-neo4j = "^0.1.0"

# ---- Vector DB ----
qdrant-client = "^1.9.0"
langchain-qdrant = "^0.1.0"

# ---- PostgreSQL ----
sqlmodel = "^0.0.21"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"

# ---- API 서버 ----
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
aiosqlite = "^0.22.1"

[tool.poetry.group.eval.dependencies]
ragas = "^0.4.3"
datasets = "^4.5.0"
langsmith = "^0.6.6"

[tool.poetry.group.ui.dependencies]
gradio = "^6.5.1"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"